# cpumonitor

./: CMakeLists.txt  README.md  build_msys2.ps1
help/: CCM.chm  CCM.chw  CCM.hhc  CCM.hhk  CCM.hhp  cpu_nuts_and_bolts.html  driver_mode_roadmap_amd.html  driver_threat_model.html  drivers_and_privileges.html  etw.html  etw_deep.html  gpu_and_motherboard.html  index.html  isa.html  isa_sse_avx_deep.html  make_chm.ps1  memory_and_disks.html  metrics.html  power_and_temps.html  processes.html  qlen.html  styles.css  troubleshooting.html
src/: app.c  app.h  cpu_static.c  cpu_static.h  etw_kernel.c  etw_kernel.h  external_sensors.c  external_sensors.h  gpu_perf.c  gpu_perf.h  guids.c  help_window.c  help_window.h  main.c  pdh_counters.c  pdh_counters.h  power_cpu.c  power_cpu.h  proc_table.c  proc_table.h  render_d2d.c  render_d2d.h  ringbuf.c  ringbuf.h  wmi_sensors.c  wmi_sensors.h
tools/: ccm_sensor_provider.c  ccm_sensor_provider_sample.ps1
